# cwu-next

./: .gitignore
.cargo/: config.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/dummy/idna_adapter/: Cargo.toml
src-tauri/dummy/idna_adapter/src/: lib.rs
src-tauri/dummy/moxcms/: Cargo.toml
src-tauri/dummy/moxcms/src/: lib.rs
src-tauri/dummy/objc2/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: chunhui-media-homepage.html.artifact.json  cwu-portal-2.html.artifact.json  cwu-portal-3.html.artifact.json  cwu-portal.html  cwu-portal.html.artifact.json  helixflow-dashboard.html.artifact.json  index.html.artifact.json  mqebi5xl-ch_cli.py  mqebi5xm-README.md  quotes.txt  truth_dare.txt
ui/scratch/: content_tail.txt
